force-app/main/default/objects/PolicyGuideline__c/PolicyGuideline__c.object-meta.xml
<CustomObject>
    <label>PolicyGuideline</label>
    <nameField>
        <label>Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PolicyGuidelines</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>