force-app/main/default/objects/PolicyGuideline__c/fields/Acknowledged_Users__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_Users__c</fullName>
    <label>Acknowledged Users</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>