force-app/main/default/objects/PolicyGuideline__c/fields/Policy_Version__c.field-meta.xml
<CustomField>
    <fullName>Policy_Version__c</fullName>
    <formula>Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Version</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>